--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/joi": "^13.4.2",
     "deco-brick": "0.0.4",
-    "joi": "^13.4.0"
+    "joi": "^13.6.0"
   }
 }
