--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "deco-brick-starter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "nodemon ./dist/index.js"
   },
@@ -10,7 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/joi": "^13.4.2",
-    "deco-brick": "0.0.4",
+    "deco-brick": "^0.1.3",
     "joi": "^13.6.0"
   }
 }
