--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@types/joi": "^13.6.0",
     "deco-brick": "^0.1.6",
     "joi": "^13.7.0"
+  },
+  "devDependencies": {
+    "@types/node": "^10.11.5"
   }
 }
