fix: start dev script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start:dev": "concurrently --handle-input \"wait-on ./dist/index.js && nodemon\" \"tsc -w -p tsconfig.json\" ",
-    "start": "node dist/main.js",
+    "start": "node dist/index.js",
     "watch": "tsc -w -p tsconfig.json",
     "dev": "nodemon ./dist/index.js"
   },
@@ -20,6 +20,7 @@
     "concurrently": "^5.0.0",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.1",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "wait-on": "^3.3.0"
   }
 }
