--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "deco-brick-cli",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Scaffold for brick serials packages",
-  "main": "deco-brick-cli.js",
+  "bin": {
+    "deco-brick-cli": "bin/deco-brick-cli"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "release": "release-it"
   },
   "repository": {
     "type": "git",
@@ -25,5 +27,8 @@
     "commander": "^5.1.0",
     "download-git-repo": "^3.0.2",
     "ora": "^2.1.0"
+  },
+  "devDependencies": {
+    "release-it": "^13.6.4"
   }
 }
